# c-atomic

./: CMakeLists.txt  README.md  catomic.h
.github/workflows/: ci.yml  ci_centos.yml  ci_cpu.yml
tests/: CMakeLists.txt  atomicity.c  spmc.c  tests-core-atomic.c  thread.c  thread.h
